maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: ';' expected but 'else' found.
    			else {
                        ^Escaper:25: error: illegal start of definition
  case 1 => // suivre à gauche
  ^Escaper:72: error: Unmatched closing brace '}' ignored here
}
^